src/apim-nva/v2.0/template.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "deploymentName_": {
      "type": "string",
      "defaultValue": "prod",
      "metadata": {
        "description": "The deployment target name"
      }
    },
    "proxyCustomHostname1": {
      "type": "string",
      "metadata": {
        "description": "Proxy Custom hostname 1."
      }
    },
    "proxyCustomHostnameBase64EncodedPfxCertificate1": {
      "type": "securestring",
      "metadata": {
        "description": "Base-64 encoded SSL .pfx Certificate for proxy custom hostname."
      }
    },
    "proxySSLCertificatePassword1": {
      "type": "securestring",
      "metadata": {
        "description": "Proxy SSL certificate password."
      }
    },
    "managementCustomHostname": {
      "type": "string",
      "metadata": {
        "description": "Proxy Custom hostname."
      }
    },
    "managementCustomHostnameBase64EncodedPfxCertificate": {
      "type": "securestring",
      "metadata": {
        "description": "Base-64 encoded SSL .pfx Certificate for proxy custom hostname."
      }
    },
    "managementSSLCertificatePassword": {
      "type": "securestring",
      "metadata": {
        "description": "Proxy SSL certificate password."
      }
    },
    "portalCustomHostname": {
      "type": "string",
      "metadata": {
        "description": "Portal Custom hostname."
      }
    },
    "portalCustomHostnameBase64EncodedPfxCertificate": {
      "type": "securestring",
      "metadata": {
        "description": "Base-64 encoded SSL .pfx Certificate for portal custom hostname."
      }
    },
    "portalSSLCertificatePassword": {
      "type": "securestring",
      "metadata": {
        "description": "Portal SSL certificate password."
      }
    },
    "apim1PublisherEmail": {
      "type": "string",
      "minLength": 1,
      "metadata": {
        "description": "The email address of the owner of the service"
      }
    },
    "apim1publisherName": {
      "type": "string",
      "minLength": 1,
      "metadata": {
        "description": "The name of the owner of the service"
      }
    },
    "api1msku": {
      "type": "string",
      "allowedValues": [
        "Developer",
        "Premium"
      ],
      "defaultValue": "Developer",
      "metadata": {
        "description": "The pricing tier of this API Management service"
      }
    },
    "apim1skuCount": {
      "type": "int",
      "defaultValue": 1,
      "metadata": {
        "description": "The instance size of this API Management service."
      }
    },
     "apim2PublisherEmail": {
      "type": "string",
      "minLength": 1,
      "metadata": {
        "description": "The email address of the owner of the service"
      }
    },
    "apim2publisherName": {
      "type": "string",
      "minLength": 1,
      "metadata": {
        "description": "The name of the owner of the service"
      }
    },
    "api2msku": {
      "type": "string",
      "allowedValues": [
        "Developer",
        "Premium"
      ],
      "defaultValue": "Developer",
      "metadata": {
        "description": "The pricing tier of this API Management service"
      }
    },
    "apim2skuCount": {
      "type": "int",
      "defaultValue": 1,
      "metadata": {
        "description": "The instance size of this API Management service."
      }
    },
    "apim2availabilityZones": {
      "type": "array",
      "defaultValue": [
        "1",
        "2"
      ],
      "metadata": {
        "description": "Numbers for availability zones, for example, 1,2,3."
      }
    },
    "publicIpSku_apim2": {
      "type": "string",
      "defaultValue": "Standard",
      "allowedValues": [
        "Basic",
        "Standard"
      ],
      "metadata": {
        "description": "SKU for the Public IP used to access the Virtual Machine."
      }
    },
    "publicIPAllocationMethod_apim2": {
      "type": "string",
      "defaultValue": "Static",
      "allowedValues": [
        "Dynamic",
        "Static"
      ],
      "metadata": {
        "description": "Allocation method for the Public IP used to access the Virtual Machine."
      }
    },

    "virtualNetworkAddressPrefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/16",
      "metadata": {
        "description": "Address prefix"
      }
    },
    "subnet0Prefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/24",
      "metadata": {
        "description": "Subnet Prefix"
      }
    },
    "subnet1Prefix": {
      "type": "string",
      "defaultValue": "10.0.1.0/24",
      "metadata": {
        "description": "Subnet Prefix"
      }
    },
    "subnet2Prefix": {
      "type": "string",
      "defaultValue": "10.0.2.0/24",
      "metadata": {
        "description": "Subnet Prefix"
      }
    },
     "subnet3Prefix": {
      "type": "string",
      "defaultValue": "10.0.3.0/24",
      "metadata": {
        "description": "Subnet Prefix"
      }
    },

    "subnet4Prefix": {
      "type": "string",
      "defaultValue": "10.0.4.0/24",
      "metadata": {
        "description": "Subnet Prefix"
      }
    },
   "subnet5Prefix": {
      "type": "string",
      "defaultValue": "10.0.5.0/24",
      "metadata": {
        "description": "Subnet Prefix"
      }
    },
  
    "subnet0ServiceEndpoints": {
      "type": "array",
      "defaultValue": [
        {
          "service": "Microsoft.Storage"
        },
        {
          "service": "Microsoft.Sql"
        },
        {
          "service": "Microsoft.EventHub"
        }
      ],
      "metadata": {
        "description": "Service Endpoints enabled on the APIM subnet"
      }
    },
    "subnet1ServiceEndpoints": {
      "type": "array",
      "defaultValue": [
        {
          "service": "Microsoft.Storage"
        },
        {
          "service": "Microsoft.Sql"
        },
        {
          "service": "Microsoft.EventHub"
        }
      ],
      "metadata": {
        "description": "Service Endpoints enabled on the APIM subnet"
      }
    },
    "subnet2ServiceEndpoints": {
      "type": "array",
      "defaultValue": [
        {
          "service": "Microsoft.Storage"
        },
        {
          "service": "Microsoft.Sql"
        },
        {
          "service": "Microsoft.EventHub"
        }
      ],
      "metadata": {
        "description": "Service Endpoints enabled on the APIM subnet"
      }
    },
     "subnet3ServiceEndpoints": {
      "type": "array",
      "defaultValue": [
        {
          "service": "Microsoft.Storage"
        },
        {
          "service": "Microsoft.Sql"
        },
        {
          "service": "Microsoft.EventHub"
        }
      ],
      "metadata": {
        "description": "Service Endpoints enabled on the APIM subnet"
      }
    },
    "subnet4ServiceEndpoints": {
      "type": "array",
      "defaultValue": [
        {
          "service": "Microsoft.Storage"
        },
        {
          "service": "Microsoft.Sql"
        },
        {
          "service": "Microsoft.EventHub"
        }
      ],
      "metadata": {
        "description": "Service Endpoints enabled on the APIM subnet"
      }
    },
    "subnet5ServiceEndpoints": {
      "type": "array",
      "defaultValue": [
        {
          "service": "Microsoft.Storage"
        },
        {
          "service": "Microsoft.Sql"
        },
        {
          "service": "Microsoft.EventHub"
        }
      ],
      "metadata": {
        "description": "Service Endpoints enabled on the APIM subnet"
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Azure Region where the resources will be deployed"
      }
    },
    "publicIpSku_VM": {
      "type": "string",
      "defaultValue": "Basic",
      "allowedValues": [
        "Basic",
        "Standard"
      ],
      "metadata": {
        "description": "SKU for the Public IP used to access the Virtual Machine."
      }
    },
    "publicIPAllocationMethod_VM": {
      "type": "string",
      "defaultValue": "Dynamic",
      "allowedValues": [
        "Dynamic",
        "Static"
      ],
      "metadata": {
        "description": "Allocation method for the Public IP used to access the Virtual Machine."
      }
    },
     "clientCIDR": {
      "type": "string",
      "metadata": {
        "description": "client IP for NSG"
      }
    },
     "managedDisk_storageAccountType": {
      "type": "string",
       "metadata": {
        "description": "pass"
      }
    },
    "vm1Name": {
      "type": "string",
      "defaultValue": "jumpbox",
      "metadata": {
        "description": "Name for vmName0"
      }
    },
    "vm1Size": {
      "type": "string",
      "defaultValue": "Standard_D2_v3",
      "metadata": {
        "description": "Size of the virtual machine 0"
      }
    },
    "vm1AdminUsername": {
      "type": "string",
      "metadata": {
        "description": "admin user name"
      }
    },
    "vm1AdminPassword": {
      "type": "string",
      "metadata": {
        "description": "pass"
      }
    },
    "vm1OSVersion": {
      "type": "string",
      "defaultValue": "2019-Datacenter",
      "allowedValues": [
        "2008-R2-SP1",
        "2012-Datacenter",
        "2012-R2-Datacenter",
        "2016-Nano-Server",
        "2016-Datacenter-with-Containers",
        "2016-Datacenter",
        "2019-Datacenter",
        "2019-Datacenter-Core",
        "2019-Datacenter-Core-smalldisk",
        "2019-Datacenter-Core-with-Containers",
        "2019-Datacenter-Core-with-Containers-smalldisk",
        "2019-Datacenter-smalldisk",
        "2019-Datacenter-with-Containers",
        "2019-Datacenter-with-Containers-smalldisk"
      ],
      "metadata": {
        "description": "The Windows version for the VM. This will pick a fully patched image of this given Windows version."
      }
    },
    "vm2Name": {
      "type": "string",
      "defaultValue": "jumpbox",
      "metadata": {
        "description": "Name for vmName0"
      }
    },
    "vm2Size": {
      "type": "string",
      "defaultValue": "Standard_D2_v3",
      "metadata": {
        "description": "Size of the virtual machine 0"
      }
    },
    "vm2AdminUsername": {
      "type": "string",
      "metadata": {
        "description": "admin user name"
      }
    },
    "vm2AdminPassword": {
      "type": "string",
      "metadata": {
        "description": "pass"
      }
    },
    "vm2OSVersion": {
      "type": "string",
      "defaultValue": "2019-Datacenter",
      "allowedValues": [
        "2008-R2-SP1",
        "2012-Datacenter",
        "2012-R2-Datacenter",
        "2016-Nano-Server",
        "2016-Datacenter-with-Containers",
        "2016-Datacenter",
        "2019-Datacenter",
        "2019-Datacenter-Core",
        "2019-Datacenter-Core-smalldisk",
        "2019-Datacenter-Core-with-Containers",
        "2019-Datacenter-Core-with-Containers-smalldisk",
        "2019-Datacenter-smalldisk",
        "2019-Datacenter-with-Containers",
        "2019-Datacenter-with-Containers-smalldisk"
      ],
      "metadata": {
        "description": "The Windows version for the VM. This will pick a fully patched image of this given Windows version."
      }
    },
    "vm3Name": {
      "type": "string",
      "defaultValue": "jumpbox",
      "metadata": {
        "description": "Name for vmName0"
      }
    },
    "vm3Size": {
      "type": "string",
      "defaultValue": "Standard_D2_v3",
      "metadata": {
        "description": "Size of the virtual machine 0"
      }
    },
    "vm3AdminUsername": {
      "type": "string",
      "metadata": {
        "description": "admin user name"
      }
    },
    "vm3AdminPassword": {
      "type": "string",
      "metadata": {
        "description": "pass"
      }
    },
    "vm3OSVersion": {
      "type": "string",
      "defaultValue": "2019-Datacenter",
      "allowedValues": [
        "2008-R2-SP1",
        "2012-Datacenter",
        "2012-R2-Datacenter",
        "2016-Nano-Server",
        "2016-Datacenter-with-Containers",
        "2016-Datacenter",
        "2019-Datacenter",
        "2019-Datacenter-Core",
        "2019-Datacenter-Core-smalldisk",
        "2019-Datacenter-Core-with-Containers",
        "2019-Datacenter-Core-with-Containers-smalldisk",
        "2019-Datacenter-smalldisk",
        "2019-Datacenter-with-Containers",
        "2019-Datacenter-with-Containers-smalldisk"
      ],
      "metadata": {
        "description": "The Windows version for the VM. This will pick a fully patched image of this given Windows version."
      }
    }
   
  },
  "variables": {
    "apiManagementServiceName": "[concat('apiservice-', uniqueString(resourceGroup().id))]",
    "apiManagementServiceName2": "[concat(parameters('deploymentName_'),'-apiservice-', uniqueString(resourceGroup().id))]",
    "storageAccountName": "[concat(parameters('deploymentName_'),'storage',uniqueString(resourceGroup().id))]",
    "virtualNetworkName": "[concat(parameters('deploymentName_'),'-vnet')]",
    "subnetPrefix" : "[concat('subnet','-')]",
    "nsgPrefix": "[concat('nsg','-')]",
    "vmNamePreffix": "[concat(parameters('deploymentName_'),'-vm-')]",
    "publicIpPreffix" : "[concat(parameters('deploymentName_'),'-publicIp-')]",
    "publicIpLabelSuffix" : "[concat('-',uniqueString(resourceGroup().id),'-public')]",
    "nicPreffix" : "[concat(parameters('deploymentName_'),'-nic-')]"
  },
  "resources": [
    {
        "type": "Microsoft.Storage/storageAccounts",
        "apiVersion": "2021-04-01",
        "name": "[variables('storageAccountName')]",
        "location": "[parameters('location')]",
        "sku": {
          "name": "Standard_LRS"
        },
        "kind": "Storage"
    },
    {
      "comments": "[concat('This NSG allows communication to VM ',parameters('vm1Name'))]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(variables('nsgPrefix'),parameters('vm1Name'))]",
      "location": "[parameters('location')]",
      "apiVersion": "2020-05-01",
      "properties": {
        "securityRules": [
          {
            "name": "NSG_IN_VM_Rule",
            "properties": {
              "description": "Allows RDP Traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "[parameters('clientCIDR')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Storage_NSG_Rule",
            "properties": {
              "description": "Allows Outbound Storage Traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Storage",
              "access": "Allow",
              "priority": 100,
              "direction": "Outbound"
            }
          }

        ]
      }
    },
    {
      "comments": "[concat('This NSG allows communication to VM ',parameters('vm2Name'))]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(variables('nsgPrefix'),parameters('vm2Name'))]",
      "location": "[parameters('location')]",
      "apiVersion": "2020-05-01",
      "properties": {
        "securityRules": [
          {
            "name": "RDP_IN_VM_Rule",
            "properties": {
              "description": "Allows RDP Traffic from JumpBox",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "[parameters('subnet1Prefix')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "DNS_IN_APIM_Rule",
            "properties": {
              "description": "Allows DNS Traffic from APIM",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "53",
              "sourceAddressPrefix": "[parameters('subnet0Prefix')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 105,
              "direction": "Inbound"
            }
          },
          {
            "name": "DNS_IN_APIM_PROD_Rule",
            "properties": {
              "description": "Allows DNS Traffic from APIM",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "53",
              "sourceAddressPrefix": "[parameters('subnet4Prefix')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 106,
              "direction": "Inbound"
            }
          },
          {
            "name": "DNS_IN_JUMBOX_Rule",
            "properties": {
              "description": "Allows DNS Traffic from JumpBox",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "53",
              "sourceAddressPrefix": "[parameters('subnet1Prefix')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
           {
            "name": "DNS_IN_BACKEND_Rule",
            "properties": {
              "description": "Allows DNS Traffic from Backend",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "53",
              "sourceAddressPrefix": "[parameters('subnet3Prefix')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 115,
              "direction": "Inbound"
            }
          },
          {
            "name": "Storage_NSG_Rule",
            "properties": {
              "description": "Allows Outbound Storage Traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Storage",
              "access": "Allow",
              "priority": 100,
              "direction": "Outbound"
            }
          }

        ]
      }
    },
     {
      "comments": "[concat('This NSG allows communication to VM ',parameters('vm3Name'))]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(variables('nsgPrefix'),parameters('vm3Name'))]",
      "location": "[parameters('location')]",
      "apiVersion": "2020-05-01",
      "properties": {
        "securityRules": [
          {
            "name": "NSG_IN_VM_Rule",
            "properties": {
              "description": "Allows RDP Traffic from JumpBox",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "[parameters('subnet1Prefix')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Client_communication_from_API_Management",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "[parameters('subnet0Prefix')]",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 105,
              "direction": "Inbound"
            }
          },
          {
            "name": "Client_communication_from_PROD_API_Management",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "[parameters('subnet4Prefix')]",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 106,
              "direction": "Inbound"
            }
          },
          {
            "name": "Client_communication_from_Jumpbox",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "[parameters('subnet1Prefix')]",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
              {
            "name": "Client_ssl_communication_from_Jumpbox",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "[parameters('subnet1Prefix')]",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 115,
              "direction": "Inbound"
            }
          },
          {
            "name": "Storage_NSG_Rule",
            "properties": {
              "description": "Allows Outbound Storage Traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Storage",
              "access": "Allow",
              "priority": 100,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(variables('nsgPrefix'),variables('apiManagementServiceName'))]",
      "apiVersion": "2020-06-01",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Client_communication_to_API_Management",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Secure_Client_communication_to_API_Management",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "Management_endpoint_for_Azure_portal_and_Powershell",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3443",
              "sourceAddressPrefix": "ApiManagement",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            }
          },
          {
            "name": "Dependency_on_Redis_Cache",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "6381-6383",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 130,
              "direction": "Inbound"
            }
          },
          {
            "name": "Dependency_to_sync_Rate_Limit_Inbound",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "4290",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 135,
              "direction": "Inbound"
            }
          },
          {
            "name": "Dependency_on_Azure_SQL",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Sql",
              "access": "Allow",
              "priority": 140,
              "direction": "Outbound"
            }
          },
          {
            "name": "Dependency_for_Log_to_event_Hub_policy",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "5671",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "EventHub",
              "access": "Allow",
              "priority": 150,
              "direction": "Outbound"
            }
          },
          {
            "name": "Dependency_on_Redis_Cache_outbound",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "6381-6383",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 160,
              "direction": "Outbound"
            }
          },
          {
            "name": "Depenedency_To_sync_RateLimit_Outbound",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "4290",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 165,
              "direction": "Outbound"
            }
          },
          {
            "name": "Dependency_on_Azure_File_Share_for_GIT",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "445",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Storage",
              "access": "Allow",
              "priority": 170,
              "direction": "Outbound"
            }
          },
          {
            "name": "Azure_Infrastructure_Load_Balancer",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 180,
              "direction": "Inbound"
            }
          },
          {
            "name": "Publish_DiagnosticLogs_And_Metrics",
            "properties": {
              "description": "APIM Logs and Metrics for consumption by admins and your IT team are all part of the management plane",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "AzureMonitor",
              "access": "Allow",
              "priority": 185,
              "direction": "Outbound",
              "destinationPortRanges": [
                "443",
                "12000",
                "1886"
              ]
            }
          },
          {
            "name": "Connect_To_SMTP_Relay_For_SendingEmails",
            "properties": {
              "description": "APIM features the ability to generate email traffic as part of the data plane and the management plane",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 190,
              "direction": "Outbound",
              "destinationPortRanges": [
                "25",
                "587",
                "25028"
              ]
            }
          },
          {
            "name": "Authenticate_To_Azure_Active_Directory",
            "properties": {
              "description": "Connect to Azure Active Directory for Developer Portal Authentication or for Oauth2 flow during any Proxy Authentication",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "AzureActiveDirectory",
              "access": "Allow",
              "priority": 200,
              "direction": "Outbound",
              "destinationPortRanges": [
                "80",
                "443"
              ]
            }
          },
          {
            "name": "Dependency_on_Azure_Storage",
            "properties": {
              "description": "APIM service dependency on Azure Blob and Azure Table Storage",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Storage",
              "access": "Allow",
              "priority": 100,
              "direction": "Outbound"
            }
          },
          {
            "name": "Publish_Monitoring_Logs",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "AzureCloud",
              "access": "Allow",
              "priority": 300,
              "direction": "Outbound"
            }
          },
          {
            "name": "Access_KeyVault",
            "properties": {
              "description": "Allow APIM service control plane access to KeyVault to refresh secrets",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "AzureKeyVault",
              "access": "Allow",
              "priority": 350,
              "direction": "Outbound",
              "destinationPortRanges": [
                "443"
              ]
            }
          },
          {
            "name": "Deny_All_Internet_Outbound",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Internet",
              "access": "Deny",
              "priority": 999,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(variables('nsgPrefix'),variables('apiManagementServiceName2'))]",
      "apiVersion": "2020-06-01",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Client_communication_to_API_Management",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Secure_Client_communication_to_API_Management",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "Management_endpoint_for_Azure_portal_and_Powershell",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3443",
              "sourceAddressPrefix": "ApiManagement",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            }
          },
          {
            "name": "Dependency_on_Redis_Cache",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "6381-6383",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 130,
              "direction": "Inbound"
            }
          },
          {
            "name": "Dependency_to_sync_Rate_Limit_Inbound",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "4290",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 135,
              "direction": "Inbound"
            }
          },
          {
            "name": "Dependency_on_Azure_SQL",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Sql",
              "access": "Allow",
              "priority": 140,
              "direction": "Outbound"
            }
          },
          {
            "name": "Dependency_for_Log_to_event_Hub_policy",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "5671",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "EventHub",
              "access": "Allow",
              "priority": 150,
              "direction": "Outbound"
            }
          },
          {
            "name": "Dependency_on_Redis_Cache_outbound",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "6381-6383",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 160,
              "direction": "Outbound"
            }
          },
          {
            "name": "Depenedency_To_sync_RateLimit_Outbound",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "4290",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 165,
              "direction": "Outbound"
            }
          },
          {
            "name": "Dependency_on_Azure_File_Share_for_GIT",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "445",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Storage",
              "access": "Allow",
              "priority": 170,
              "direction": "Outbound"
            }
          },
          {
            "name": "Azure_Infrastructure_Load_Balancer",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 180,
              "direction": "Inbound"
            }
          },
          {
            "name": "Publish_DiagnosticLogs_And_Metrics",
            "properties": {
              "description": "APIM Logs and Metrics for consumption by admins and your IT team are all part of the management plane",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "AzureMonitor",
              "access": "Allow",
              "priority": 185,
              "direction": "Outbound",
              "destinationPortRanges": [
                "443",
                "12000",
                "1886"
              ]
            }
          },
          {
            "name": "Connect_To_SMTP_Relay_For_SendingEmails",
            "properties": {
              "description": "APIM features the ability to generate email traffic as part of the data plane and the management plane",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 190,
              "direction": "Outbound",
              "destinationPortRanges": [
                "25",
                "587",
                "25028"
              ]
            }
          },
          {
            "name": "Authenticate_To_Azure_Active_Directory",
            "properties": {
              "description": "Connect to Azure Active Directory for Developer Portal Authentication or for Oauth2 flow during any Proxy Authentication",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "AzureActiveDirectory",
              "access": "Allow",
              "priority": 200,
              "direction": "Outbound",
              "destinationPortRanges": [
                "80",
                "443"
              ]
            }
          },
          {
            "name": "Dependency_on_Azure_Storage",
            "properties": {
              "description": "APIM service dependency on Azure Blob and Azure Table Storage",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Storage",
              "access": "Allow",
              "priority": 100,
              "direction": "Outbound"
            }
          },
          {
            "name": "Publish_Monitoring_Logs",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "AzureCloud",
              "access": "Allow",
              "priority": 300,
              "direction": "Outbound"
            }
          },
          {
            "name": "Access_KeyVault",
            "properties": {
              "description": "Allow APIM service control plane access to KeyVault to refresh secrets",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "AzureKeyVault",
              "access": "Allow",
              "priority": 350,
              "direction": "Outbound",
              "destinationPortRanges": [
                "443"
              ]
            }
          },
          {
            "name": "Deny_All_Internet_Outbound",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Internet",
              "access": "Deny",
              "priority": 999,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2019-11-01",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('virtualNetworkName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', concat(variables('nsgPrefix'),variables('apiManagementServiceName')))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', concat(variables('nsgPrefix'),variables('apiManagementServiceName2')))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', concat(variables('nsgPrefix'),parameters('vm1Name')))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', concat(variables('nsgPrefix'),parameters('vm2Name')))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', concat(variables('nsgPrefix'),parameters('vm3Name')))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('virtualNetworkAddressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[concat(variables('subnetPrefix'),variables('apiManagementServiceName'))]",
            "properties": {
              "addressPrefix": "[parameters('subnet0Prefix')]",
              "networkSecurityGroup": {
                 "id": "[resourceId('Microsoft.Network/networkSecurityGroups', concat(variables('nsgPrefix'),variables('apiManagementServiceName')))]"
              },
              "serviceEndpoints": "[parameters('subnet0ServiceEndpoints')]"
            }
          },
          {
            "name": "[concat(variables('subnetPrefix'),parameters('vm1Name'))]",
            "properties": {
              "addressPrefix": "[parameters('subnet1Prefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', concat(variables('nsgPrefix'),parameters('vm1Name')))]"
              },
              "serviceEndpoints": "[parameters('subnet1ServiceEndpoints')]"
            }
          },
           {
            "name": "[concat(variables('subnetPrefix'),parameters('vm2Name'))]",
            "properties": {
              "addressPrefix": "[parameters('subnet2Prefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', concat(variables('nsgPrefix'),parameters('vm2Name')))]"
              },
              "serviceEndpoints": "[parameters('subnet2ServiceEndpoints')]"
            }
          },
          {
           "name": "[concat(variables('subnetPrefix'),parameters('vm3Name'))]",
            "properties": {
              "addressPrefix": "[parameters('subnet3Prefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', concat(variables('nsgPrefix'),parameters('vm3Name')))]"
              },
              "serviceEndpoints": "[parameters('subnet3ServiceEndpoints')]"
            }
          },
          {
           "name": "[concat(variables('subnetPrefix'),variables('apiManagementServiceName2'),'-','Developer')]",
            "properties": {
              "addressPrefix": "[parameters('subnet4Prefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', concat(variables('nsgPrefix'),variables('apiManagementServiceName2')))]"
              },
              "serviceEndpoints": "[parameters('subnet4ServiceEndpoints')]"
            }
          },
          {
           "name": "[concat(variables('subnetPrefix'),variables('apiManagementServiceName2'),'-','Premium')]",
            "properties": {
              "addressPrefix": "[parameters('subnet5Prefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', concat(variables('nsgPrefix'),variables('apiManagementServiceName2')))]"
              },
              "serviceEndpoints": "[parameters('subnet5ServiceEndpoints')]"
            }
          }
          
        ]
      }
    },
    {
      "apiVersion": "2021-08-01",
      "name": "[variables('apiManagementServiceName')]",
      "type": "Microsoft.ApiManagement/service",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]"
      ],
      "sku": {
        "name": "[parameters('api1msku')]",
        "capacity": "[parameters('apim1skuCount')]"
      },
      "properties": {
        "publisherEmail": "[parameters('apim1publisherEmail')]",
        "publisherName": "[parameters('apim1publisherName')]",
        "virtualNetworkType": "Internal",
        "virtualNetworkConfiguration": {
          "subnetResourceId": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), concat(variables('subnetPrefix'),variables('apiManagementServiceName')))]"
        },
         "hostnameConfigurations": [
          {
            "type": "Proxy",
            "hostName": "[parameters('proxyCustomHostname1')]",
            "encodedCertificate": "[parameters('proxyCustomHostnameBase64EncodedPfxCertificate1')]",
            "certificatePassword": "[parameters('proxySSLCertificatePassword1')]",
            "negotiateClientCertificate": false
          },
          {
            "type": "Management",
            "hostName": "[parameters('managementCustomHostname')]",
            "encodedCertificate": "[parameters('managementCustomHostnameBase64EncodedPfxCertificate')]",
            "certificatePassword": "[parameters('managementSSLCertificatePassword')]",
            "negotiateClientCertificate": false
          },
          {
            "type": "DeveloperPortal",
            "hostName": "[parameters('portalCustomHostname')]",
            "encodedCertificate": "[parameters('portalCustomHostnameBase64EncodedPfxCertificate')]",
            "certificatePassword": "[parameters('portalSSLCertificatePassword')]",
            "negotiateClientCertificate": false
          }
        ]
      }
    },

    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2020-05-01",
      "name": "[concat(variables('publicIpPreffix'),variables('apiManagementServiceName2'))]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "[parameters('publicIpSku_apim2')]"
      },
      "properties": {
        "publicIPAllocationMethod": "[parameters('publicIPAllocationMethod_apim2')]",
        "publicIPAddressVersion": "IPv4",
        "dnsSettings": {
         "domainNameLabel": "[concat(variables('apiManagementServiceName2'),variables('publicIpLabelSuffix'))]"
        }
      },
        "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]"
      ]
    },
    {
      "apiVersion": "2021-08-01",
      "name": "[variables('apiManagementServiceName2')]",
      "type": "Microsoft.ApiManagement/service",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', concat(variables('nsgPrefix'),variables('apiManagementServiceName2')))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]",
        "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('publicIpPreffix'),variables('apiManagementServiceName2')))]"
      ],
      "sku": {
        "name": "[parameters('api2msku')]",
        "capacity": "[parameters('apim2skuCount')]"
      },
      "zones": "[parameters('apim2availabilityZones')]",
      "properties": {
        "publisherEmail": "[parameters('apim2publisherEmail')]",
        "publisherName": "[parameters('apim2publisherName')]",
        "virtualNetworkType": "Internal",
        "publicIpAddressId": "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('publicIpPreffix'),variables('apiManagementServiceName2')))]",
        "virtualNetworkConfiguration": {
          "subnetResourceId": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), concat(variables('subnetPrefix'),variables('apiManagementServiceName2'),'-',parameters('api2msku')))]"
        },
          "hostnameConfigurations": [
          {
            "type": "Proxy",
            "hostName": "[parameters('proxyCustomHostname1')]",
            "encodedCertificate": "[parameters('proxyCustomHostnameBase64EncodedPfxCertificate1')]",
            "certificatePassword": "[parameters('proxySSLCertificatePassword1')]",
            "negotiateClientCertificate": false
          },
          {
            "type": "Management",
            "hostName": "[parameters('managementCustomHostname')]",
            "encodedCertificate": "[parameters('managementCustomHostnameBase64EncodedPfxCertificate')]",
            "certificatePassword": "[parameters('managementSSLCertificatePassword')]",
            "negotiateClientCertificate": false
          },
          {
            "type": "DeveloperPortal",
            "hostName": "[parameters('portalCustomHostname')]",
            "encodedCertificate": "[parameters('portalCustomHostnameBase64EncodedPfxCertificate')]",
            "certificatePassword": "[parameters('portalSSLCertificatePassword')]",
            "negotiateClientCertificate": false
          }
        ]
      }
      
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2021-02-01",
      "name": "[concat(variables('publicIpPreffix'),parameters('vm1Name'))]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "[parameters('publicIpSku_VM')]"
      },
       "dependsOn": [ 
            "[variables('virtualNetworkName')]",
            "[resourceId('Microsoft.Network/networkSecurityGroups', concat(variables('nsgPrefix'),parameters('vm1Name')))]"
            
          ],
      "properties": {
        "publicIPAllocationMethod": "[parameters('publicIPAllocationMethod_VM')]",
        "dnsSettings": {
          "domainNameLabel": "[concat(parameters('vm1Name'),variables('publicIpLabelSuffix'))]"
        }
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2021-02-01",
      "name": "[concat(variables('nicPreffix'),parameters('vm1Name'))]",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('publicIpPreffix'),parameters('vm1Name')))]"
              },
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), concat(variables('subnetPrefix'),parameters('vm1Name')))]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[variables('virtualNetworkName')]",
        "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('publicIpPreffix'),parameters('vm1Name')))]"
     
      ]
    },
    
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2021-03-01",
      "name": "[concat(variables('vmNamePreffix'),parameters('vm1Name'))]",
      "location": "[parameters('location')]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('vm1Size')]"
        },
        "osProfile": {
          "computerName": "[parameters('vm1Name')]",
          "adminUsername": "[parameters('vm1AdminUsername')]",
          "adminPassword": "[parameters('vm1AdminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "[parameters('vm1OSVersion')]",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "[parameters('managedDisk_storageAccountType')]"
            }
          },
          "dataDisks": [
            {
              "diskSizeGB": 1023,
              "lun": 0,
              "createOption": "Empty"
            }
          ]
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('nicPreffix'),parameters('vm1Name')))]"
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true,
            "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))).primaryEndpoints.blob]"
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', concat(variables('nsgPrefix'),parameters('vm1Name')))]",
        "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('publicIpPreffix'),parameters('vm1Name')))]",
        "[variables('virtualNetworkName')]",
        "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('nicPreffix'),parameters('vm1Name')))]",
        "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2021-02-01",
      "name": "[concat(variables('nicPreffix'),parameters('vm2Name'))]",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), concat(variables('subnetPrefix'),parameters('vm2Name')))]"
              }
            }
          }
        ]
      },
      "dependsOn": [
         "[variables('virtualNetworkName')]"
     
      ]
    },
    
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2021-03-01",
      "name": "[concat(variables('vmNamePreffix'),parameters('vm2Name'))]",
      "location": "[parameters('location')]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('vm2Size')]"
        },
        "osProfile": {
          "computerName": "[parameters('vm2Name')]",
          "adminUsername": "[parameters('vm2AdminUsername')]",
          "adminPassword": "[parameters('vm2AdminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "[parameters('vm2OSVersion')]",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "[parameters('managedDisk_storageAccountType')]"
            }
          },
          "dataDisks": [
            {
              "diskSizeGB": 1023,
              "lun": 0,
              "createOption": "Empty"
            }
          ]
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('nicPreffix'),parameters('vm2Name')))]"
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true,
            "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))).primaryEndpoints.blob]"
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', concat(variables('nsgPrefix'),parameters('vm2Name')))]",
        "[variables('virtualNetworkName')]",
        "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('nicPreffix'),parameters('vm2Name')))]",
        "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2021-02-01",
      "name": "[concat(variables('nicPreffix'),parameters('vm3Name'))]",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), concat(variables('subnetPrefix'),parameters('vm3Name')))]"
              }
            }
          }
        ]
      },
      "dependsOn": [
         "[variables('virtualNetworkName')]"
      ]
    },
    
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2021-03-01",
      "name": "[concat(variables('vmNamePreffix'),parameters('vm3Name'))]",
      "location": "[parameters('location')]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('vm3Size')]"
        },
        "osProfile": {
          "computerName": "[parameters('vm3Name')]",
          "adminUsername": "[parameters('vm3AdminUsername')]",
          "adminPassword": "[parameters('vm3AdminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "[parameters('vm3OSVersion')]",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "[parameters('managedDisk_storageAccountType')]"
            }
          },
          "dataDisks": [
            {
              "diskSizeGB": 1023,
              "lun": 0,
              "createOption": "Empty"
            }
          ]
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('nicPreffix'),parameters('vm3Name')))]"
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true,
            "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))).primaryEndpoints.blob]"
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', concat(variables('nsgPrefix'),parameters('vm3Name')))]",
        "[variables('virtualNetworkName')]",
        "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('nicPreffix'),parameters('vm3Name')))]",
        "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))]"
      ]
    }
     
    
  ]
}
